# cppCalc

./: CMakeLists.txt
newMath/: CMakeLists.txt  newMath.cpp
src/: Calculator.cpp  Calculator.h  DllFunction.h  FunctionManager.cpp  FunctionManager.h  Parser.cpp  Parser.h  main.cpp
